{
    "name": "SelectionInputController",
    "maps": [
        {
            "name": "MouseControl",
            "id": "5c89c9c1-7a35-4946-bd23-6da79cb4e509",
            "actions": [
                {
                    "name": "ShiftClick",
                    "type": "Button",
                    "id": "70060649-fd4d-48a4-a6e9-c3a6fa59eeb0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseLeftClick",
                    "type": "Value",
                    "id": "9de3c399-d817-416b-8f67-0b5b7e24276b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "5aed991a-fc19-4bce-b371-d274db86314f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9b3ea6b9-aa5a-46b8-a9da-49d8b82fcf59",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "StartPosition",
                    "id": "57525637-0611-42d9-8e57-b7241cff9e29",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "48cbafae-8048-4de8-aed8-4959377bdaf8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "1da43313-7fc2-4737-a286-08c22f8439b9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "be75f95a-5d5f-4e46-ae71-09118c68563d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}